hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__access_unqualified_annotation_same_namespace.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "a",
            IdentId(2) => "b",
            IdentId(3) => "f",
            IdentId(4) => "core",
            IdentId(5) => "add",
            IdentId(6) => "boolean",
            IdentId(7) => "div",
            IdentId(8) => "eq",
            IdentId(9) => "ge",
            IdentId(10) => "gt",
            IdentId(11) => "le",
            IdentId(12) => "lt",
            IdentId(13) => "mul",
            IdentId(14) => "neg",
            IdentId(15) => "neq",
            IdentId(16) => "number",
            IdentId(17) => "sub",
            IdentId(18) => "void",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(2),
                    span: 4:14; [62, 63],
                    symbol_id: SymbolId(3),
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Block(
                    [
                        StmtId(5),
                    ],
                ),
                span: 5:21; [84, 99],
                type_id: TypeId(2),
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        symbol_id: SymbolId(1),
                    },
                    InputId(0),
                    [
                        StmtId(3),
                        StmtId(4),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Annotation(
                    Identifier {
                        id: IdentId(2),
                        span: 3:24; [46, 47],
                        symbol_id: SymbolId(3),
                    },
                ),
                span: 3:13; [35, 48],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: LetFn(
                    Identifier {
                        id: IdentId(3),
                        span: 5:17; [80, 81],
                        symbol_id: SymbolId(21),
                    },
                    [
                        Annotation {
                            ident_ref_ids: [
                                IdentRefId(0),
                            ],
                            span: 4:13; [61, 63],
                        },
                    ],
                    [],
                    Return {
                        type_def_id: None,
                        typed_id: TypeId(1),
                    },
                    Provided(
                        ExprId(0),
                    ),
                    None,
                ),
                span: 5:13; [76, 99],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Namespace(
                    Identifier {
                        id: IdentId(1),
                        span: 2:19; [19, 20],
                        symbol_id: SymbolId(2),
                    },
                    InputId(0),
                    [
                        StmtId(1),
                        StmtId(2),
                    ],
                ),
                span: 7:9; [108, 109],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Namespace(
                    Identifier {
                        id: IdentId(4),
                        span: 9:11; [129, 133],
                        symbol_id: SymbolId(4),
                    },
                    InputId(0),
                    [],
                ),
                span: 9:17; [135, 136],
            },
            StmtId(5) => Statement {
                id: StmtId(5),
                kind: Ret(
                    None,
                    Implicit,
                ),
                span: 5:21; [84, 99],
            },
        ],
        type_defs: [],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(2),
                        ],
                        IdentId(4): [
                            SymbolId(4),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(1),
                    {
                        IdentId(2): [
                            SymbolId(3),
                        ],
                        IdentId(3): [
                            SymbolId(21),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: Annotation(
                    IdentId(2),
                    StmtId(1),
                ),
                type_id: TypeId(1),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: Namespace(
                    IdentId(4),
                    {
                        IdentId(5): [
                            SymbolId(20),
                        ],
                        IdentId(6): [
                            SymbolId(7),
                        ],
                        IdentId(7): [
                            SymbolId(19),
                        ],
                        IdentId(8): [
                            SymbolId(17),
                            SymbolId(18),
                        ],
                        IdentId(9): [
                            SymbolId(16),
                        ],
                        IdentId(10): [
                            SymbolId(15),
                        ],
                        IdentId(11): [
                            SymbolId(14),
                        ],
                        IdentId(12): [
                            SymbolId(13),
                        ],
                        IdentId(13): [
                            SymbolId(12),
                        ],
                        IdentId(14): [
                            SymbolId(11),
                        ],
                        IdentId(15): [
                            SymbolId(9),
                            SymbolId(10),
                        ],
                        IdentId(16): [
                            SymbolId(6),
                        ],
                        IdentId(17): [
                            SymbolId(8),
                        ],
                        IdentId(18): [
                            SymbolId(5),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(18),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(16),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: NativeType(
                    IdentId(6),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(8),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(9),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(8),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Native(
                    IdentId(5),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: LetFn(
                    IdentId(3),
                    StmtId(2),
                    [],
                    TypeId(1),
                ),
                type_id: TypeId(10),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Type,
            TypeId(6) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(7) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(8) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(9) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(10) => Function(
                [],
                TypeId(1),
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {
                ExprId(0): [
                    Implicit(
                        None,
                    ),
                ],
            },
            unreachable: [],
        },
    },
)
